--- a/organization.html
+++ b/organization.html
@@ -46,8 +46,8 @@
         </section>
 
         <section class="organization-main">
-            <div class="organization-text-z">
-                <h2 class="organization-text-h2">Квартирники</h2>
+            <div class="organization-text-r">
+                <h2 class="organization-text-h2-r">Квартирники</h2>
             </div>
             <div class="organization-item-2">
                 <img src="images/cvartirnik.png" alt="Галерея проектов">
